Rename Abdomen label to Abd/Onco

--- a/config.yaml
+++ b/config.yaml
@@ -135,7 +135,7 @@ skills:
     display_order: 4
     slug: msk-haut
   Abdomen:
-    label: Abdomen
+    label: Abd/Onco
     button_color: '#00bcd4'
     text_color: '#ffffff'
     weight: 1.0
