Use slash labels for MSK/Haut and Card/Thor

--- a/config.yaml
+++ b/config.yaml
@@ -131,7 +131,7 @@ skills:
     display_order: 3
     slug: paed
   MSK-Haut:
-    label: MSK-Haut
+    label: MSK/Haut
     button_color: '#9c27b0'
     text_color: '#ffffff'
     weight: 0.8
@@ -147,7 +147,7 @@ skills:
     display_order: 5
     slug: abdomen
   CardThor:
-    label: CardThor
+    label: Card/Thor
     button_color: '#28a745'
     text_color: '#ffffff'
     weight: 1.2
